Preview does not update once preview is done #90511

Closed
opened 2021-08-07 21:41:40 +02:00 by Colin Marmond · 20 comments
Member

System Information
Operating system: Linux 5.11.0-25-generic #27~20.04.1-Ubuntu x86_64 x86_64 x86_64 GNU/Linux
Graphics card: RTX 2070

Blender Version
Broken: 3.0.0 alpha latest master
Worked: Two weeks ago

First bad commit is 4f64fa4f86

Short description of error

The cycles render preview does not update when we move the view once the preview finished.

Exact steps for others to reproduce the error
Open blender -> change to cycles -> preview the cube -> wait until the samples are 32/32 and marked as preview done -> try to move the view

**System Information** Operating system: Linux 5.11.0-25-generic #27~20.04.1-Ubuntu x86_64 x86_64 x86_64 GNU/Linux Graphics card: RTX 2070 **Blender Version** Broken: 3.0.0 alpha latest master Worked: Two weeks ago First bad commit is 4f64fa4f86 **Short description of error** The cycles render preview does not update when we move the view once the preview finished. **Exact steps for others to reproduce the error** Open blender -> change to cycles -> preview the cube -> wait until the samples are 32/32 and marked as preview done -> try to move the view
Author
Member

Added subscriber: @Kdaf

Added subscriber: @Kdaf

#90530 was marked as duplicate of this issue

#90530 was marked as duplicate of this issue
Member

Added subscriber: @kursadk

Added subscriber: @kursadk
Member

Edit: blender-3.0.0-alpha+master.171433e84137-windows.amd64 does not demonstrate this issue.

I can confirm this. It is weird, it seems like it is evident if you keep the preview window for a while and try to navigate it after some time. See the video, demonstrated using RTX 2070 on Windows.

I was having the issue with a complicated scene, I thought it must have been something to do with how heavy the scene was. This must have been introduced within last couple days in 3.x nightlies. I do not remember having this issue last week/

6bLKQCZnZv.mp4

*Edit: blender-3.0.0-alpha+master.171433e84137-windows.amd64 does not demonstrate this issue.* I can confirm this. It is weird, it seems like it is evident if you keep the preview window for a while and try to navigate it after some time. See the video, demonstrated using RTX 2070 on Windows. I was having the issue with a complicated scene, I thought it must have been something to do with how heavy the scene was. This must have been introduced within last couple days in 3.x nightlies. I do not remember having this issue last week/ [6bLKQCZnZv.mp4](https://archive.blender.org/developer/F10273971/6bLKQCZnZv.mp4)
Member

Here is another video demoing it with a real scene. I can force an update with shift-Z and back.

1Taiiu9agz.mp4

Here is another video demoing it with a real scene. I can force an update with `shift-Z` and back. [1Taiiu9agz.mp4](https://archive.blender.org/developer/F10273973/1Taiiu9agz.mp4)
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @SteffenD

Added subscriber: @SteffenD

While I think that changing the task's status to "Confirmed" on your own is not the way it's intended to be, I can only confirm what's been reported here before. I suspected the Denoiser stuff to have something to do with it but it also happens without viewport denoising.

While I think that changing the task's status to "Confirmed" on your own is not the way it's intended to be, I can only confirm what's been reported here before. I suspected the Denoiser stuff to have something to do with it but it also happens without viewport denoising.
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

I can confirm. Will bisect the issue.

I can confirm. Will bisect the issue.
Member

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht
Member

The first bad commit according to my bisecting is this:
4f64fa4f86

CC @Sergey and @brecht

The first bad commit according to my bisecting is this: 4f64fa4f86 CC @Sergey and @brecht

Added subscriber: @kosblend

Added subscriber: @kosblend
Sergey Sharybin self-assigned this 2021-08-09 10:14:02 +02:00

This issue was referenced by blender/cycles@3aec6acc13

This issue was referenced by blender/cycles@3aec6acc13ead48791b3218f68e83deff65dc909

This issue was referenced by 52c349cfcd

This issue was referenced by 52c349cfcd28f402e6e73450831078fbd3fbbf08

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Fixed for GPU. The CPU seemed to work fine.
Please let me know if the issue is fully fixed for you!

Fixed for GPU. The CPU seemed to work fine. Please let me know if the issue is fully fixed for you!

Great! Thanks Sergey. This completely fixed it for me.

Great! Thanks Sergey. This completely fixed it for me.
Member

In #90511#1203745, @Sergey wrote:
Fixed for GPU. The CPU seemed to work fine.
Please let me know if the issue is fully fixed for you!

Can confirm the fix works for me.

> In #90511#1203745, @Sergey wrote: > Fixed for GPU. The CPU seemed to work fine. > Please let me know if the issue is fully fixed for you! Can confirm the fix works for me.
Author
Member

Yes, fix working for me as well, thanks Sergey.

Yes, fix working for me as well, thanks Sergey.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90511
No description provided.