Fix T90511: Cycles preview does not update once preview is done

Caused by 4f64fa4f8628.

Was a bad backport from the Cycles X branch: the fact that CPU and GPU
has different reset code paths was not taken into account.